# wt-homegw

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  espnow_example.h  espnow_example_main.c  idf_component.yml  wt_homegw_main.c
main/app/: app.h  app_espnow_recv.c  app_homeass.c
main/http/: http_server.c
main/system/: bsp.c  bsp.h  mqtt.c  mqtt.h  settings.c  settings.h  smartconfig.c  wifi_mgr.c  wifi_mgr.h
spiffs/: index.html
